--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "overrides": {
-    "ajv": "^8.12.0",
-    "ajv-keywords": "^5.1.0"
+    "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -56,7 +56,9 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "react-scripts": "5.0.1",
+    "@craco/craco": "^7.1.0"
   },
   "scripts": {
     "start": "craco start",
@@ -76,6 +78,7 @@
     ]
   },
   "devDependencies": {
+    "fork-ts-checker-webpack-plugin" : "^8.0.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
     "@eslint/js": "9.23.0",
