--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "overrides": {
     "ajv": "6.12.6",
-    "ajv-keywords": "3.5.2"
+    "ajv-keywords": "3.5.2",
+    "ajv-formats": "1.6.1",
+    "schema-utils": "3.3.0"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
