--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,12 +2,6 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "overrides": {
-    "ajv": "6.12.6",
-    "ajv-keywords": "3.5.2",
-    "ajv-formats": "1.6.1",
-    "schema-utils": "3.1.1"
-  },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.8",
@@ -47,9 +41,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.507.0",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
     "react-day-picker": "^9.0.0",
-    "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "react-resizable-panels": "^3.0.1",
     "react-router-dom": "^7.5.1",
@@ -60,7 +52,11 @@
     "vaul": "^1.1.2",
     "zod": "^3.24.4",
     "react-scripts": "5.0.1",
-    "@craco/craco": "^7.1.0"
+    "@craco/craco": "^7.1.0",
+    "ajv": "^6.12.6",
+    "schema-utils": "^3.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "start": "craco start",
@@ -92,7 +88,8 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "globals": "15.15.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "ajv": "6.12.6"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
